--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -16,7 +16,7 @@ jobs:
 
   target_branch_check:
     runs-on: ubuntu-latest
-    if: ${{ startsWith( github.base_ref, 'releases/') && github.head_ref == 'main' || startsWith(github.head_ref, 'bug/') }}
+    if: ${{ startsWith( github.base_ref, 'release/') && github.head_ref == 'main' || startsWith(github.head_ref, 'bug/') }}
     steps:
       - uses: superbrothers/close-pull-request@v3
         with:
