--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -20,6 +20,7 @@ jobs:
 
   fmt:
     runs-on: ubuntu-latest
+    needs: check
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
@@ -33,6 +34,7 @@ jobs:
 
   clippy:
     runs-on: ubuntu-latest
+    needs: fmt
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
@@ -42,10 +44,11 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - run: cargo clippy -- -D warnings
+      - run: cargo clippy -- 
 
   test:
     runs-on: ubuntu-latest
+    needs: clippy
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
