--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,39 @@
-
 on:
   pull_request:
     branches:
-      - main
+      - release/*
+name: Test the action
 
 jobs:
-  build_release:
-    strategy:
-      matrix:
-        version: [1.75.0, 1.80.0, 1.85.0, 1.88.0]
-        os: [windows-latest, ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-    if: ${{  github.base_ref == 'main' && startsWith(github.head_ref, 'feature/') }}
+  main:
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v4
-      - run: cargo build --release
+      - name: Aquire code
+        if: always()
+        uses: actions/checkout@v2
+      - name: Put commit hash/name in env variables
+        run: |
+          echo "GIT_HASH=$(git rev-parse --short=8 HEAD)" >> $GITHUB_ENV
+          echo "GIT_MESSAGE<<EOF" >> $GITHUB_ENV
+          git log -1 --pretty=%B >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+    #
+    # Some steps that compile code
+    # would go here
+    #
+      - name: Release the new binaries
+        uses: mini-bomba/create-github-release@v1.1.3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: "latest"
+          prerelease: true
+          name: "Latest Commit, that compiles"
+          body: |
+            This automatic prerelease is built from commit ${{ env.GIT_HASH }} and was triggered by @${{ github.actor }}
+            [Github Actions workflow run that built this prerelease](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+
+            Commit message:
+            ${{ env.GIT_MESSAGE }}
+          files: |
+            build/*.exe
+          clear_attachments: true
