--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,4 @@
+name: Release on PR to release branch
 on:
   pull_request:
     branches:
@@ -16,10 +17,7 @@ jobs:
           echo "GIT_MESSAGE<<EOF" >> $GITHUB_ENV
           git log -1 --pretty=%B >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
-    #
-    # Some steps that compile code
-    # would go here
-    #
+
       - name: Release the new binaries
         uses: mini-bomba/create-github-release@v1.1.3
         with:
@@ -34,5 +32,5 @@ jobs:
             Commit message:
             ${{ env.GIT_MESSAGE }}
           files: |
-            build/*.exe
+            target/*.exe
           clear_attachments: true
