--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,13 +10,16 @@ jobs:
     steps:
       - name: Aquire code
         if: always()
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Put commit hash/name in env variables
         run: |
           echo "GIT_HASH=$(git rev-parse --short=8 HEAD)" >> $GITHUB_ENV
           echo "GIT_MESSAGE<<EOF" >> $GITHUB_ENV
           git log -1 --pretty=%B >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
+
+      - name: Build release
+        run: cargo build --release
 
       - name: Release the new binaries
         uses: mini-bomba/create-github-release@v1.1.3
@@ -32,5 +35,5 @@ jobs:
             Commit message:
             ${{ env.GIT_MESSAGE }}
           files: |
-            target/*.exe
+            target/release/simeis-server
           clear_attachments: true
