--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Aquire code
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: always()
         uses: actions/checkout@v4
       - name: Put commit hash/name in env variables
