--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,5 @@
 name: Release on PR to release branch
 on:
-  pull_request:
-    branches:
-      - release/*
   push:
     branches:
       - release/*
@@ -14,33 +11,24 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: Aquire code
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: always()
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Put commit hash/name in env variables
         run: |
           echo "GIT_HASH=$(git rev-parse --short=8 HEAD)" >> $GITHUB_ENV
           echo "GIT_MESSAGE<<EOF" >> $GITHUB_ENV
           git log -1 --pretty=%B >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
-
       - name: Build release
         run: cargo build --release
-
       - name: Release the new binaries
         uses: mini-bomba/create-github-release@v1.1.3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: "latest"
+          tag: ${{ env.GIT_HASH }}
           prerelease: true
-          name: "Latest Commit, that compiles"
+          name: "Commit ${{ env.GIT_HASH }}"
           body: |
-            This automatic prerelease is built from commit ${{ env.GIT_HASH }} and was triggered by @${{ github.actor }}
-            [Github Actions workflow run that built this prerelease](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
-
-            Commit message:
+            Built from commit ${{ env.GIT_HASH }} by @${{ github.actor }}
             ${{ env.GIT_MESSAGE }}
           files: |
             target/release/simeis-server
