--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Release on PR to release branch
 on:
+  pull_request:
+    branches:
+    - release/*
   push:
     branches:
       - release/*
