--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,9 +1,8 @@
 Package: sismeis-teamop
-Version: 12.0
+Version: 1.0.0
 Section: base
 Priority: optional
 Architecture: all
-Depends: bash
 Maintainer: Yvelin-officiel
-Description: Affiche la date dans le terminal
+Description: sismeis TeamOP 
 Homepage: https://github.com/Yvelin-officiel/TeamOp
