--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -5,3 +5,4 @@ Priority: optional
 Architecture: all
 Maintainer: Yvelin-officiel
 Description: simeis TeamOP 
+Homepage: https://github.com/Yvelin-officiel/TeamOp
