--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,9 @@ jobs:
           cp target/release/simeis-server TeamOp/usr/bin/
           cp -r DEBIAN TeamOp/
 
+          chmod 755 DEBIAN/preinst
+          chmod 755 DEBIAN/postinst
+
       - name: Create Debian package
         run: |
           dpkg-deb --build TeamOp
