--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Create Debian package
         run: |
-          dpkg-deb --build TeamOp.deb
+          dpkg-deb --build TeamOp
 
       - name: upload Debian package
         uses: actions/upload-artifact@v4
