--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Create Debian package
         run: |
-          dpkg-deb --build TeamOp TeamOp.deb
+          dpkg-deb --build TeamOp TeamOp-${GIT_HASH}.deb
 
       - name: upload Debian package
         uses: actions/upload-artifact@v4
