--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,8 +45,8 @@ jobs:
       - name: upload Debian package
         uses: actions/upload-artifact@v4
         with:
-          name: TeamOp-deb
-          path: TeamOp.deb
+          name: TeamOp-${GIT_HASH}-deb
+          path: TeamOp-${GIT_HASH}.deb
 
       - name: Build Docker image
         run: |
