--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,8 +45,8 @@ jobs:
       - name: upload Debian package
         uses: actions/upload-artifact@v4
         with:
-          name: TeamOp-${GIT_HASH}-deb
-          path: TeamOp-${GIT_HASH}.deb
+          name: TeamOp-${{ env.GIT_HASH }}-deb
+          path: TeamOp-${{ env.GIT_HASH }}.deb
 
       - name: Build Docker image
         run: |
