--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,17 +51,17 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -f .github/Dockerfile -t simeis-server:release .
+          docker build -f .github/Dockerfile -t TeamOp-server:release .
 
       - name: Save Docker image 
         run: |
-          docker image save simeis-server:release -o simeis-server-image.tar
+          docker image save TeamOp-server:release -o TeamOp-server-image.tar
 
       - name: Upload Docker image 
         uses: actions/upload-artifact@v4
         with:
-          name: simeis-server-docker-image
-          path: simeis-server-image.tar
+          name: TeamOp-server-docker-image
+          path: TeamOp-server-image.tar
 
       - name: Release the new binaries
         uses: mini-bomba/create-github-release@v1.1.3
@@ -74,7 +74,7 @@ jobs:
             Built from commit ${{ env.GIT_HASH }} by @${{ github.actor }}
             ${{ env.GIT_MESSAGE }}
           files: |
-            target/release/simeis-server
+            target/release/TeamOp-server
             TeamOp-${{ env.GIT_HASH }}.deb
             simeis-server-image.tar
           clear_attachments: true
