--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,36 +32,36 @@ jobs:
       - name: Prepare Debian package structure
         run: |
           mkdir -p TeamOp/usr/bin
-          mv target/release/simeis-server target/release/TeamOp-server
-          cp target/release/TeamOp-server TeamOp/usr/bin/
-          cp -r DEBIAN TeamOp/
+          mv target/release/simeis-server target/release/teamop-server
+          cp target/release/teamop-server teamop/usr/bin/
+          cp -r DEBIAN teamop/
 
           chmod 755 TeamOp/DEBIAN/preinst
           chmod 755 TeamOp/DEBIAN/postinst
 
       - name: Create Debian package
         run: |
-          dpkg-deb --build TeamOp TeamOp-${GIT_HASH}.deb
+          dpkg-deb --build TeamOp teamop-${GIT_HASH}.deb
 
       - name: upload Debian package
         uses: actions/upload-artifact@v4
         with:
-          name: TeamOp-${{ env.GIT_HASH }}-deb
-          path: TeamOp-${{ env.GIT_HASH }}.deb
+          name: teamop-${{ env.GIT_HASH }}-deb
+          path: teamop-${{ env.GIT_HASH }}.deb
 
       - name: Build Docker image
         run: |
-          docker build -f .github/Dockerfile -t TeamOp-server:release .
+          docker build -f .github/Dockerfile -t teamop-server:release .
 
       - name: Save Docker image 
         run: |
-          docker image save TeamOp-server:release -o TeamOp-server-image.tar
+          docker image save teamop-server:release -o teamop-server-image.tar
 
       - name: Upload Docker image 
         uses: actions/upload-artifact@v4
         with:
-          name: TeamOp-server-docker-image
-          path: TeamOp-server-image.tar
+          name: teamop-server-docker-image
+          path: teamop-server-image.tar
 
       - name: Release the new binaries
         uses: mini-bomba/create-github-release@v1.1.3
@@ -75,7 +75,7 @@ jobs:
             ${{ env.GIT_MESSAGE }}
           files: |
             target/release/TeamOp-server
-            TeamOp-${{ env.GIT_HASH }}.deb
+            teamop-${{ env.GIT_HASH }}.deb
             simeis-server-image.tar
           clear_attachments: true
 
