fix: noms cette fois c'est vraiment la bonne

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
           files: |
             target/release/teamop-server
             teamop-${{ env.GIT_HASH }}.deb
-            simeis-server-image.tar
+            teamop-server-image.tar
           clear_attachments: true
 
   # docker:
